--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^4.1.17",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
